# Computational-Intelligence-Muhammad-Sarib-Khan

./: pyproject.toml
Lab_1/: List_generation_and_class_State.py  Readme.md  gx_utils.py
